# my-ai-profile

./: .env.example  .gitignore  Dockerfile  GENERATOR_README.md  MyAIProfile.md  README.md  cli.py  llm_client.py  pyproject.toml  requirements.txt
.github/workflows/: generate-profile.yml  persona.yml
analyzers/: code_style.py  text_style.py
generators/: markdown_gen.py
scripts/: get_linkedin_session_token.py  run_all.py
sources/: github.py  linkedin.py  rss.py
